# $Id$

2007-11-15	Ivan Y. Khvostishkov

	* core/Base/Assert.class.php: circular linked objects cause a fatal
	error in var_export(), so dumping via print_r() now.

2007-11-14	Ivan Y. Khvostishkov

	* main/Utils/ArrayUtils.class.php: countNonemptyValues(): try to guess
	what it does.

2007-11-12	Dmitry E. Pismenny

	* main/Markup/Feed/FeedReader.class.php: errors from simplexml_load_file()
	translated into WrongStateExceptions.

2007-11-07	Ivan Y. Khvostishkov

	* main/Utils/TextUtils.class.php: friendlyNumber(): bug with small
	orders fixed.

2007-11-06	Konstantin V. Arkhipov

	* ext/src/core/Form/Filters/: Filtrator, BaseFilter implemented.

	* ext/src/core/Form/: PlainForm, RegulatedForm implemented.

	* ext/src/core/Primitives/: FiltrablePrimitive, PrimitiveNumber
	implemented.

	* etx/src/onphp.h: new macroses: ONPHP_MAKE_FOREIGN_OBJECT,
	ONPHP_FOREACH, ONPHP_ASSOC_ISSET, ONPHP_ASSOC_UNSET, ONPHP_ASSOC_SET,
	ONPHP_ASSOC_GET, ONPHP_PROPERTY_DESTRUCT and RETURN_THIS.

2007-11-04	Konstantin V. Arkhipov

	* main/DAOs/StorableDAO.class.php: added merge() which updates only
	changed columns; take() now uses cache-only merge() instead of plain
	save().

	* ext/src/main/Markup/Html/: SgmlEndTag, SgmlTag, SgmlToken, Cdata
	implemented.

	* ext/src/core/Logic/: MappableObject implemented.

	* ext/src/core/OSQL/: DBBinary, DropTableQuery, ExtractPart, FullText
	implemented.

	* ext/src/onphp.h: new macroses: ONPHP_CHECK_EMPTY, ONPHP_INSTANCEOF,
	ONPHP_GET_ARGS and ONPHP_CALL_METHOD_*.

	* ext/src/core/Form/: BasePrimitive, RangedPrimitive, ComplexPrimitive
	implemented.

2007-11-03	Konstantin V. Arkhipov

	* core/Form/: alias support removed.

	* core/Form/: ability to make an unfiltered import implemented.

	* meta/, core/DB/, core/Form/: support for binary data type
	implemented.

	* core/OSQL/DataType.class.php: typeToString moved to Dialect.

2007-11-02	Vladimir A. Altuchov

	* main/Utils/IO/FileReader.class.php: new reader added.

2007-11-02	Konstantin V. Arkhipov
